--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
-    "@urql/exchange-graphcache": "^3.4.0",
+    "@urql/exchange-graphcache": "^4.0.0",
     "formik": "^2.2.6",
     "framer-motion": "^2.9.4",
     "graphql": "^15.5.0",
-    "next": "latest",
+    "next": "^10.0.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "urql": "^1.11.6"
+    "urql": "^2.0.1"
   },
   "license": "MIT",
   "devDependencies": {
